--- a/system/package.json
+++ b/system/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
       "body-parser": "^1.19.0",
       "cors": "^2.8.5",
+      "node_packages":"",
       "express": "^4.17.1"
     }
   }
