--- a/project/package.json
+++ b/project/package.json
@@ -4,7 +4,7 @@
   "author": "",
   "description": "Describe your i0 project",
   "main": "index.js",
-  "scripts": {},
+  "scripts": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/username/projectname.git"
