Added firebase command

--- a/project/package.json
+++ b/project/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "author": "",
   "description": "Describe your i0 project",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": [],
   "repository": {
     "type": "git",
